Bug 398201 - [CBI] Issues with org.eclipse.osgi (temp hack)